Updated 'sports.html' via CloudCannon

--- a/sports.html
+++ b/sports.html
@@ -17,7 +17,7 @@ baseball_image: uploads/baseball-thumb.jpg
           </div>
           <img class="img-fluid img-ease" src="{{page.baseurl}}{{page.baseball_image}}" alt="KCC Cavaliers Baseball 2017 NJCAA Division 2 National Champions photo, link to baseball page" />
         </a>
-        <div class="sports-caption">
+        <div class="sports-caption editable">
           <p>
             <span class="jump-link-span"><a href="" class="jump-links">Schedule</a></span>
             <span class="jump-link-span"><a href="" class="jump-links">Roster</a></span>
@@ -37,7 +37,7 @@ baseball_image: uploads/baseball-thumb.jpg
           </div>
           <img class="img-fluid img-ease" src="{{page.baseurl}}uploads/basketball-thumb.jpg" alt="Photo of Dante Emerson #23 of the KCC Cavaliers Men's Basketball team, link to men's basketball page" />
         </a>
-        <div class="sports-caption">
+        <div class="sports-caption editable">
           <p>
             <span class="jump-link-span"><a href="" class="jump-links">Schedule</a></span>
             <span class="jump-link-span"><a href="" class="jump-links">Roster</a></span>
