Updated 'sports.html' via CloudCannon

--- a/sports.html
+++ b/sports.html
@@ -18,14 +18,8 @@ baseball_image: uploads/baseball-thumb.jpg
           <img class="img-fluid img-ease" src="{{page.baseurl}}{{page.baseball_image}}" alt="KCC Cavaliers Baseball 2017 NJCAA Division 2 National Champions photo, link to baseball page" />
         </a>
         <div class="sports-caption editable">
-          <p>
-            <span class="jump-link-span"><a href="" class="jump-links">Schedule</a></span>
-            <span class="jump-link-span"><a href="" class="jump-links">Roster</a></span>
-            <span class="jump-link-span"><a href="" class="jump-links">News</a></span>
-          </p>
-          <div class="sports-blurb editable">
-              
-          </div>
+            <p><span class="jump-link-span"><a class="jump-links cc-active" href="/baseball/schedule/">Schedule</a></span> <span class="jump-link-span"><a class="jump-links cc-active" href="/baseball/roster/">Roster</a></span> <span class="jump-link-span"><a class="jump-links cc-active" href="/baseball/news/">News</a></span></p>
+            <div class="sports-blurb">&nbsp;</div>
         </div>
       </div>
       <div class="col-md-4 col-sm-6 img-wrapper">
