Updated 'sports.html' via CloudCannon

--- a/sports.html
+++ b/sports.html
@@ -51,7 +51,7 @@ baseball_image: uploads/baseball-thumb.jpg
           </div>
           <img class="img-fluid img-ease" src="{{page.baseurl}}uploads/wbasketball-thumb.jpg" alt="Photo of Dejah Weathersby of the KCC Cavaliers Women's Basketball team, link to women's basketball page" />
         </a>
-        <div class="sports-caption">
+        <div class="sports-caption editable">
           <p>
             <span class="jump-link-span"><a href="" class="jump-links">Schedule</a></span>
             <span class="jump-link-span"><a href="" class="jump-links">Roster</a></span>
@@ -71,7 +71,7 @@ baseball_image: uploads/baseball-thumb.jpg
           </div>
           <img class="img-fluid img-ease" src="{{page.baseurl}}uploads/soccer-thumb.jpg" alt="Photo from a KCC Cavaliers Soccer game vs ONU, link to soccer page" />
         </a>
-        <div class="sports-caption">
+        <div class="sports-caption editable">
           <p>
             <span class="jump-link-span"><a href="" class="jump-links">Schedule</a></span>
             <span class="jump-link-span"><a href="" class="jump-links">Roster</a></span>
@@ -91,7 +91,7 @@ baseball_image: uploads/baseball-thumb.jpg
           </div>
           <img class="img-fluid img-ease" src="{{page.baseurl}}uploads/softball-thumb.jpg" alt="Photo of KCC Cavaliers Softball's Erin Gaston pitching, link to softball page" />
         </a>
-        <div class="sports-caption">
+        <div class="sports-caption editable">
           <p>
             <span class="jump-link-span"><a href="" class="jump-links">Schedule</a></span>
             <span class="jump-link-span"><a href="" class="jump-links">Roster</a></span>
@@ -111,7 +111,7 @@ baseball_image: uploads/baseball-thumb.jpg
           </div>
           <img class="img-fluid img-ease" src="{{page.baseurl}}uploads/volleyball-thumb.jpg" alt="Team photo of the 2017 KCC Cavaliers volleyball team, link to volleyball page" />
         </a>
-        <div class="sports-caption">
+        <div class="sports-caption editable">
           <p>
             <span class="jump-link-span"><a href="" class="jump-links">Schedule</a></span>
             <span class="jump-link-span"><a href="" class="jump-links">Roster</a></span>
