--- a/baseball.html
+++ b/baseball.html
@@ -154,8 +154,8 @@ slides:
         <div class="row">
           <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach2"><img src="{{page.baseurl}}uploads/bryce-shafer.jpg" alt="Photo of Assistant Bryce Shafer" class="img-fluid coach-img modal-link editable" /></a></div>
           <div class="col-6 float-right">
-            <a data-toggle="modal" href="#modalCoach2" class="modal-link"><h5 class="coach-name">Bryce Shafer</h5>
-            <h6 class="coach-title">Assistant Coach</h6></a>
+            <a data-toggle="modal" href="#modalCoach2" class="modal-link"><h5 class="coach-name editable">Bryce Shafer</h5>
+            <h6 class="coach-title editable">Assistant Coach</h6></a>
             <p class="editable">
               815&#8209;802&#8209;8609<br />
               bshafer@kcc.edu
