--- a/mens-basketball.html
+++ b/mens-basketball.html
@@ -136,10 +136,10 @@ slides:
     <div class="row">
       <div class="col-md-4">
         <div class="row">
-          <div class="col-6 float-left"></div>
+          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach2"><img src="//d1qmdf3vop2l07.cloudfront.net/chic-sunshine.cloudvent.net/compressed/bd948daf8e05f0933423f9e9ea325c28.jpg" alt="Photo of Head Coach" class="img-fluid coach-img modal-link editable" data-cms-source="" data-cms-index="4" data-cms-original-src="../uploads/bryce-shafer.jpg" /></a></div>
           <div class="col-6 float-right">
-            <a data-toggle="modal" href="#modalCoach1" class="modal-link"><h5 class="coach-name">Alex Thorson</h5>
-            <h6 class="coach-title">Head Coach</h6></a>
+            <a data-toggle="modal" href="#modalCoach1" class="modal-link"><h5 class="coach-name editable">Alex Thorson</h5>
+            <h6 class="coach-title editable">Head Coach</h6></a>
             <p>815&#8209;802&#8209;8609<br>
             athorson@kcc.edu</p>
             <a data-toggle="modal" class="btn btn-primary" href="#modalCoach1">View Bio</a>
