Updated 'mens-basketball.html' via CloudCannon

--- a/mens-basketball.html
+++ b/mens-basketball.html
@@ -136,11 +136,11 @@ slides:
     <div class="row">
       <div class="col-md-4">
         <div class="row">
-          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach2"><img alt="Photo of Head Coach" class="img-fluid coach-img modal-link editable" src="/uploads/blank-male-avatar-1.jpg" width="300" height="400" /></a></div>
+          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach1"><img alt="Photo of Alex Thorson" class="img-fluid coach-img modal-link editable" src="/uploads/blank-male-avatar-1.jpg" width="300" height="400" /></a></div>
           <div class="col-6 float-right">
             <a data-toggle="modal" href="#modalCoach1" class="modal-link"><h5 class="coach-name editable">Alex Thorson</h5>
             <h6 class="coach-title editable">Head Coach</h6></a>
-            <p>815&#8209;802&#8209;8609<br />
+            <p class="editable">815&#8209;802&#8209;8609<br />
             athorson@kcc.edu</p>
             <a data-toggle="modal" class="btn btn-primary" href="#modalCoach1">View Bio</a>
           </div>
@@ -162,8 +162,7 @@ slides:
       <div class="modal-body">
         <h5 class="coach-name editable">Alex Thorson</h5>
         <h6 class="coach-title editable">Head Coach</h6>
-        <p>815&#8209;802&#8209;8609<br />
-        athorson@kcc.edu</p><br />
+    <br />
         <div class="editable">
           <p>Head Coach Alex Thorson is in his first year as head coach of the Cavaliers. He comes to KCC after serving two years as a graduate assistant men’s basketball coach at Olivet Nazarene University. Coach Thorson brings a great passion and tremendous knowledge for the game to the Cavaliers.</p>
           <p>At Olivet, Thorson was mentored by Illinois Basketball Coaches Association, Chicagoland Collegiate Athletic Conference Athletics, and National Association of Intercollegiate Athletics Hall of Fame Coach Ralph Hodge who is entering his 40th season as head coach of the Tigers.</p>
