--- a/soccer.html
+++ b/soccer.html
@@ -139,8 +139,8 @@ slides:
           <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach1"><img src="{{page.baseurl}}uploads/17-mbarclay-coach.jpg" alt="Photo of Head Coach Mike Barclay" class="img-fluid coach-img modal-link editable"></a></div>
           <div class="col-6 float-right">
             <a data-toggle="modal" href="#modalCoach1" class="modal-link"><h5 class="coach-name">Mike Barclay</h5>
-            <h6 class="coach-title">Head Coach</h6></a>
-            <p>815&#8209;802&#8209;8618<br>
+            <h6 class="coach-title editable">Head Coach</h6></a>
+            <p class="editable'">815&#8209;802&#8209;8618<br>
             mbarclay@kcc.edu</p>
             <a data-toggle="modal" class="btn btn-primary" href="#modalCoach1">View Bio</a>
           </div>
@@ -150,8 +150,8 @@ slides:
         <div class="row">
           <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach2"><img src="{{page.baseurl}}uploads/17-jhall-asst.jpg" alt="Photo of Assistant Coach John Hall" class="img-fluid coach-img modal-link editable"></a></div>
           <div class="col-6 float-right">
-            <a data-toggle="modal" href="#modalCoach2" class="modal-link"><h5 class="coach-name">John Hall</h5>
-            <h6 class="coach-title">Assistant Coach</h6></a>
+            <a data-toggle="modal" href="#modalCoach2" class="modal-link"><h5 class="coach-name editable">John Hall</h5>
+            <h6 class="coach-title editable">Assistant Coach</h6></a>
             <a data-toggle="modal" class="btn btn-primary" href="#modalCoach2">View Bio</a>
           </div>
         </div>
@@ -160,8 +160,8 @@ slides:
         <div class="row">
           <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach3"><img src="{{page.baseurl}}uploads/17-kjoseph-asst.jpg" alt="Photo of Assistant Coach Keion Joseph 'Cruz'" class="img-fluid coach-img modal-link editable"></a></div>
           <div class="col-6 float-right">
-            <a data-toggle="modal" href="#modalCoach3" class="modal-link"><h5 class="coach-name">Keion Joseph "Cruz"</h5>
-            <h6 class="coach-title">Assistant Coach</h6></a>
+            <a data-toggle="modal" href="#modalCoach3" class="modal-link"><h5 class="coach-name editable">Keion Joseph "Cruz"</h5>
+            <h6 class="coach-title editable">Assistant Coach</h6></a>
             <a data-toggle="modal" class="btn btn-primary" href="#modalCoach3">View Bio</a>
           </div>
         </div>
@@ -172,8 +172,8 @@ slides:
         <div class="row">
           <div class="col-6 float-left"></div>
           <div class="col-6 float-right">
-            <a data-toggle="modal" href="#modalCoach4" class="modal-link"><h5 class="coach-name">James Ashby</h5>
-            <h6 class="coach-title">Assistant Coach</h6></a>
+            <a data-toggle="modal" href="#modalCoach4" class="modal-link"><h5 class="coach-name editable">James Ashby</h5>
+            <h6 class="coach-title editable">Assistant Coach</h6></a>
             <a data-toggle="modal" class="btn btn-primary" href="#modalCoach4">View Bio</a>
           </div>
         </div>
@@ -193,8 +193,7 @@ slides:
         <img src="{{page.baseurl}}uploads/17-mbarclay-coach.jpg" alt="Photo of Head Coach Mike Barclay." class="img-fluid float-left coach-modal-img editable">
         <h5 class="coach-name editable">Mike Barclay</h5>
         <h6 class="coach-title editable">Head Coach</h6>
-        <p>815&#8209;802&#8209;8618<br>
-        mbarclay@kcc.edu</p><br>
+       <br>
         <div class="editable">
           <p>Mike Barclay is entering his fourth year as Head Soccer Coach for the Cavaliers. He was the assistant coach during the 2012 and 2013 seasons.</p>
           <p>Coach Barclay was a three-time all-region, two-time all-sectional and two-time all-state goalie for Downers Grove South High School (1983-85). For three seasons, Coach Barclay played NCAA Division I collegiate soccer for Eastern Illinois University in Charleston. He still holds rankings as no. 1 in saves percentage, no. 2 in goals against average and no. 3 in total saves in EIU history. In 1989, Coach Barclay lead the Panthers to the NCAA Division I National Indoor Championship for the first time in school history. He also played for one season in the semi-pro Chicago Metro League.</p>
