Updated 'soccer.html' via CloudCannon

--- a/soccer.html
+++ b/soccer.html
@@ -138,9 +138,9 @@ slides:
         <div class="row">
           <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach1"><img src="{{page.baseurl}}uploads/17-mbarclay-coach.jpg" alt="Photo of Head Coach Mike Barclay" class="img-fluid coach-img modal-link editable"></a></div>
           <div class="col-6 float-right">
-            <a data-toggle="modal" href="#modalCoach1" class="modal-link"><h5 class="coach-name">Mike Barclay</h5>
+            <a data-toggle="modal" href="#modalCoach1" class="modal-link"><h5 class="coach-name editable">Mike Barclay</h5>
             <h6 class="coach-title editable">Head Coach</h6></a>
-            <p class="editable'">815&#8209;802&#8209;8618<br>
+            <p class="editable">815&#8209;802&#8209;8618<br>
             mbarclay@kcc.edu</p>
             <a data-toggle="modal" class="btn btn-primary" href="#modalCoach1">View Bio</a>
           </div>
