--- a/soccer.html
+++ b/soccer.html
@@ -170,7 +170,7 @@ slides:
     <div class="row coach-row-marg">
       <div class="col-md-4">
         <div class="row">
-          <div class="col-6 float-left"></div>
+          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach4"><img src="{{page.baseurl}}uploads/17-kjoseph-asst.jpg" alt="Photo of Assistant Coach" class="img-fluid coach-img modal-link editable"></a></div>
           <div class="col-6 float-right">
             <a data-toggle="modal" href="#modalCoach4" class="modal-link"><h5 class="coach-name editable">James Ashby</h5>
             <h6 class="coach-title editable">Assistant Coach</h6></a>
