--- a/womens-basketball.html
+++ b/womens-basketball.html
@@ -178,10 +178,10 @@ slides:
         </button>
       </div>
       <div class="modal-body">
-        <img src="{{page.baseurl}}uploads/10-ddenson-coach.jpg" alt="Photo of Head Coach Chris Gardner" class="img-fluid float-left coach-modal-img editable">
+        <img src="{{page.baseurl}}uploads/10-ddenson-coach.jpg" alt="Photo of Head Coach" class="img-fluid float-left coach-modal-img editable">
         <h5 class="coach-name editable">Donnie Denson</h5>
         <h6 class="coach-title editable">Head Coach</h6>
-        <p>815&#8209;802&#8209;8614<br>
+   
       <br>
         <div class="editable">
           <p>A native of the Peoria area, Donnie Denson has worked at KCC for the past 25 years, and is proud to call Kankakee home.</p>
