Updated 'softball.html' via CloudCannon

--- a/softball.html
+++ b/softball.html
@@ -170,8 +170,8 @@ slides:
         <div class="row">
           <div class="col-6 float-left"></div>
           <div class="col-6 float-right">
-            <h5 class="coach-name">Charlie Riner</h5>
-            <h6 class="coach-title">Assistant Coach</h6>
+            <h5 class="coach-name editable">Charlie Riner</h5>
+            <h6 class="coach-title editable">Assistant Coach</h6>
           </div>
         </div>
       </div>
