--- a/volleyball.html
+++ b/volleyball.html
@@ -150,8 +150,8 @@ slides:
         <div class="row">
           <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach2"><img src="{{page.baseurl}}uploads/17-acampbell-asst.jpg" alt="Photo of Assistant Coach Alexia Campbell" class="img-fluid coach-img modal-link editable"></a></div>
           <div class="col-6 float-right">
-            <h5 class="coach-name editable">Alexia Campbell</h5>
-            <h6 class="coach-title editable">Assistant Coach</h6>
+            <a data-toggle="modal" href="#modalCoach2" class="modal-link"><h5 class="coach-name editable">Alexia Campbell</h5></a>
+            <a data-toggle="modal" href="#modalCoach2" class="modal-link"><h6 class="coach-title editable">Assistant Coach</h6></a>
             <a data-toggle="modal" class="btn btn-primary" href="#modalCoach2">View Bio</a>
           </div>
         </div>
