Updated 'mens-basketball.html' via CloudCannon

--- a/mens-basketball.html
+++ b/mens-basketball.html
@@ -136,7 +136,7 @@ slides:
     <div class="row">
       <div class="col-md-4">
         <div class="row">
-          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach1"><img alt="Photo of Alex Thorson" class="img-fluid coach-img modal-link editable" src="/uploads/blank-male-avatar-1.jpg" width="300" height="400" /></a></div>
+          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach1"><img alt="Photo of Alex Thorson" class="img-fluid coach-img modal-link editable" src="/uploads/blank-male-avatar-1.jpg" title="Photo of Alex Thorson" width="300" height="400" /></a></div>
           <div class="col-6 float-right">
             <a data-toggle="modal" href="#modalCoach1" class="modal-link"><h5 class="coach-name editable">Alex Thorson</h5>
             <h6 class="coach-title editable">Head Coach</h6></a>
