Add schedule & news button links. wrap sliders in <a> ...
Add "View Full Schedule" & "View All News" button to link to full schedules and news rollups.
Wrap Hero slick slider's slides in <a> links to respective sports, tied into YAML front-matter.
Slide link is changed via changing front-matters "url: ..." value

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ slides:
     </div>
     <div class="row news-social-row">
       <div class="col-md-8 col-xs-12 news-feed">
-        <h2 class="main-heading grey-bg"><img src="assets/img/news.svg" class="icon-middle" alt="News icon">&#160;News</h2>
+        <h2 class="main-heading grey-bg"><img src="assets/img/news.svg" class="icon-middle" alt="News icon">&#160;News  <a href="{{ page.baseurl }}news" class="btn btn-primary schedule__button-margin">View All News</a></h2>
         <div class="news__scroll">
           <ul class="news__list">
             {% for post in site.posts %}
