--- a/baseball.html
+++ b/baseball.html
@@ -9,27 +9,27 @@ slides:
     alt-text: >-
       Photo of the Cavaliers baseball team celebrating their 2017 NJCAA Division
       II National Championship victory.
-    url: 'http://www.kcc.edu'
+    url: '#'
     text1: 'June 6, 2017 | Baseball'
     text2: 2017 NJCAA DIVISION II <br>NATIONAL CHAMPIONS
   - image: uploads/baseball-hero2.jpg
     alt-text:
-    url: 'http://www.kcc.edu'
+    url: '#'
     text1: Ipsum Lorem
     text2: Ipsum Lorem
   - image: uploads/baseball-hero3.jpg
     alt-text:
-    url: 'http://www.kcc.edu'
+    url: '#'
     text1: Apply here
     text2: Ipsum Lorem
   - image: uploads/baseball-slide-4_D51_0559.jpg
     alt-text:
-    url: 'http://www.kcc.edu'
+    url: '#'
     text1: Apply here
     text2: Ipsum Lorem
   - image: uploads/baseball-slide-5_D72_7775.jpg
     alt-text:
-    url: 'http://www.kcc.edu'
+    url: '#'
     text1: Apply here
     text2: Ipsum Lorem.
 ---
@@ -40,19 +40,27 @@ slides:
       {% for slide in page.slides %}
         {% if forloop.first == true %}
         <div>
-          <img src="{{page.baseurl}}{{slide.image}}" class="img-fluid slide-img" alt="{{slide.alt-text}}">
-          <div class="heading-container">
-            <h3 class="sub-heading">{{slide.text1}}</h3>
-            <h3 class="slide-heading">{{slide.text2}}</h3>
-          </div>
+          <a href="{{ slide.url }}">
+            <img src="{{page.baseurl}}{{slide.image}}" class="img-fluid slide-img" alt="{{slide.alt-text}}">
+          </a>
+          <a href="{{ slide.url }}">
+            <div class="heading-container">
+              <h3 class="sub-heading">{{slide.text1}}</h3>
+              <h3 class="slide-heading">{{slide.text2}}</h3>
+            </div>
+          </a>
         </div>
         {% else %}
         <div>
-          <img src="assets/img/placeholder.png" data-src="{{page.baseurl}}{{slide.image}}" class="img-fluid slide-img" alt="{{slide.alt-text}}">
-          <div class="heading-container">
-            <h3 class="sub-heading">{{slide.text1}}</h3>
-            <h3 class="slide-heading">{{slide.text2}}</h3>
-          </div>
+          <a href="{{ slide.url }}">
+            <img src="{{page.baseurl}}assets/img/placeholder.png" data-src="{{page.baseurl}}{{slide.image}}" class="img-fluid slide-img" alt="{{slide.alt-text}}">
+          </a>
+          <a href="{{ slide.url }}">
+            <div class="heading-container">
+              <h3 class="sub-heading">{{slide.text1}}</h3>
+              <h3 class="slide-heading">{{slide.text2}}</h3>
+            </div>
+          </a>
         </div>
         {% endif %}
       {% endfor %}
@@ -64,13 +72,13 @@ slides:
 <section class="container content-marg">
     <div class="row schedule-row">
       <div class="col-md-12">
-        <h2 class="main-heading"><img src="{{page.baseurl}}assets/img/calendar.svg" class="icon-middle" alt="Calendar icon" />&#160;Upcoming Games</h2>
+        <h2 class="main-heading"><img src="{{page.baseurl}}assets/img/calendar.svg" class="icon-middle" alt="Calendar icon" />&#160;Upcoming Games <a href="{{ page.baseurl }}baseball/schedule" class="btn btn-primary schedule__button-margin">View Full Schedule</a></h2>
         <div id="track" class="baseball slick games"></div>
       </div>
     </div>
     <div class="row news-social-row">
       <div class="col-md-8 news-feed">
-        <h2 class="main-heading grey-bg"><img src="{{page.baseurl}}assets/img/news.svg" class="icon-middle" alt="News icon" />&#160;News</h2>
+        <h2 class="main-heading grey-bg"><img src="{{page.baseurl}}assets/img/news.svg" class="icon-middle" alt="News icon" />&#160;News  <a href="{{ page.baseurl }}baseball/news" class="btn btn-primary schedule__button-margin">View All News</a></h2>
           <div class="news__scroll">
             <ul class="news__list">
               {% for post in site.posts %}
