--- a/index.html
+++ b/index.html
@@ -88,40 +88,8 @@ slides:
         <div class="news__scroll">
           <ul class="news__list">
             {% for post in site.posts %}
-            <li class="no-bullet news__list-item">
-              <div class="news__cell-left">
-                <a data-toggle="modal" href="#{{ post.title | md5 }}" class="news__link">
-                  <img src="{{ post.news_thumb_image }}" class="news__thumb" alt="">
-                </a>
-              </div>
-              <div class="news__cell-right">
-                <a data-toggle="modal" href="#{{ post.title | md5 }}" class="news__link">
-                  <h5 class="news__sub-heading news__sub-heading--spacing"> {{ post.sport-category }} &#183; <span class="news__date"> {{ post.date | date: "%B %-d, %Y" }} </span></h5>
-                  <h4 class="news__heading">{{ post.title }}</h4>
-                  <p class="news__paragraph">{{ post.description }}</p>
-                </a>
-              </div>
-            </li>
-            <div class="modal fade" id="{{ post.title | md5 }}" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-              <div class="modal-dialog modal-dialog-centered" role="document">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                      <span aria-hidden="true">&times;</span>
-                    </button>
-                  </div>
-                  <div class="modal-body">
-                    <img src="{{ page.baseurl }}{{ post.news_thumb_image }}" alt="{{ post.thumb_alt }}" class="img-fluid float-left news__modal-thumb"/>
-                    <h5 class="news__sub-heading news__sub-heading--spacing"> {{ post.sport-category }} &#183; <span class="news__date"> {{ post.date | date: "%B %-d, %Y" }} </span></h5>
-                    <h4 class="news__heading">{{ post.title }}</h4>
-                    <p class="news__paragraph">{{ post.content }}</p>
-                  </div>
-                  <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                  </div>
-                </div>
-              </div>
-            </div>
+              {% include news-item.html %}
+              {% include news-item-modal.html %}
             {% endfor %}
           </ul>
         </div>
