Change al Cavaliers Classic links to Cavalier Club

--- a/support/cash-bash/index.html
+++ b/support/cash-bash/index.html
@@ -18,7 +18,7 @@ title: Cash Bash
           <a href="{{page.baseurl}}/{{page.base}}/cash-bash" class="nav-link sub-nav-link">Cash Bash</a>
         </li>
         <li class="nav-item">
-          <a href="{{page.baseurl}}/{{page.base}}/cavalier-classic" class="nav-link sub-nav-link">Cavalier Classic</a>
+          <a href="{{page.baseurl}}/{{page.base}}/cavalier-club" class="nav-link sub-nav-link">Cavalier Club</a>
         </li>
       </ul>
     </div>
